# geometry

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: intersection.rs  lib.rs  proptest.rs
src/mesh/: convex_hull.rs  halfedge.rs  mod.rs  trimesh.rs
src/mesh_shortest_paths/: mod.rs
src/primitive/: aabb.rs  infinite_triangle.rs  mod.rs  ray.rs  segment.rs  surface_point.rs  triangle.rs  vector_utils.rs
